# IMS_30_5_2024

./: CMakeLists.txt  Main.cpp  column_example.ltlf  column_example.part  column_example_simple.ltlf  column_example_simple.part  column_example_test.ltlf  decision_tree.ltlf  decision_tree_agt.ltlf  progression.cpp  slippery_world.ltlf  triangle_tireworld.ltlf
